--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,500;0,700;1,400&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Polimes</title>
+    
+    <!--ESTO ES PARA LA APLICACION WEB PROGRESIVA-->
+    <meta name="description" content="Informacion de ventas de Polimes">
+    <meta name="theme-color" content="#2D2C3C">
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="shortcut icon" href="recursos/logo.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="recursos/128.png">
+    <link rel="apple-touch-startup-image" href="recursos/128.png">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <nav>
@@ -48,6 +60,6 @@
         <a href="https://web.whatsapp.com/send?l=es&phone=573112860774&text=%20https://tienda.polimes.com/"target="_blank"><img src="logos/wa.png" alt=""></a>
         </div>
     </footer>
-    
+    <script src="script.js"></script>
 </body> 
 </html>
