--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
     
     </nav>
     <section id="contenido">
+        <!--logo principal de la empresa polimes-->
     <div class="logo"> 
         <img src="imagenes/polimeslogo.png" alt="polimes">
     </div>
+    <!--imagenes referentes a la empresa en los tres contenedores-->
     <div class="carrusel">
         <div class="fondo">
             <div> 
@@ -55,6 +57,7 @@
         <p>© Todos los derechos reservados.</p>
         </div>
         <div class="redes">
+            <!--imagenes de las redes sociales -->
         <a href="https://www.facebook.com/polimes/"target="_blank"><img src="logos/face.png" alt=""></a>
         <a href="https://www.instagram.com/polimescolombia/"target="_blank"><img src="logos/insta.png" alt=""></a>
         <a href="https://web.whatsapp.com/send?l=es&phone=573112860774&text=%20https://tienda.polimes.com/"target="_blank"><img src="logos/wa.png" alt=""></a>
