--- a/index3.html
+++ b/index3.html
@@ -18,7 +18,8 @@
         <li><a href="index4.html">Estadisticas</a></li>
     </nav>
     
-    <section id="logo">
+    <section id="logo">  
+        <!--logo principal de la empresa polimes-->
         <img src="imagenes/polimeslogo.png" alt="logo">
     </section>  
     <section class="ventas">
@@ -30,14 +31,16 @@
         </div> 
     </section >
     <section id="categorias">
+        <!--contenedor principales de las categorias-->
         <div class="contenedor_categoria">
+            <!--categorias de productos de la empresa con las imagenes de cada una, clase info es el contenedor de cada uno-->
             <div class="imagen_categoria">
             <img src="imagenes/categoria1.png" alt="">
             </div>
             <div class="info">
             <h4>Termo Viandas </h4>
             <div class="contenido_porcentaje">
-            <h5 class="porcentaje">30%</h5>
+            <h5 class="porcentaje">25%</h5>
             </div>
             </div>
         </div>
@@ -48,7 +51,7 @@
             <div class="info">
             <h4>Viandas Termicas</h4>
             <div class="contenido_porcentaje">
-            <h5  class="porcentaje">30%</h5>
+            <h5  class="porcentaje">12%</h5>
             </div>
             </div>
         </div>
@@ -59,7 +62,7 @@
             <div class="info">
             <h4>Termos Liquidos Calientes</h4>
             <div class="contenido_porcentaje">
-            <h5 class="porcentaje">30%</h5>
+            <h5 class="porcentaje">10%</h5>
             </div>
             </div>
         </div>
@@ -70,7 +73,7 @@
             <div class="info">
             <h4>Termo Liquidos</h4>
             <div class="contenido_porcentaje">
-            <h5 class="porcentaje">30%</h5>
+            <h5 class="porcentaje">9%</h5>
             </div>
             </div>
         </div>
@@ -81,7 +84,7 @@
             <div class="info">
             <h4>Botellas</h4>
             <div class="contenido_porcentaje">
-            <h5 class="porcentaje">30%</h5>
+            <h5 class="porcentaje">9%</h5>
             </div>
             </div>
         </div>
@@ -92,7 +95,7 @@
             <div class="info">
             <h4>Recipientes</h4>
             <div class="contenido_porcentaje">
-            <h5  class="porcentaje">30%</h5>
+            <h5  class="porcentaje">8%</h5>
             </div>
             </div>
         </div>
@@ -103,7 +106,7 @@
             <div class="info">
             <h4>To Go</h4>
             <div class="contenido_porcentaje">
-            <h5  class="porcentaje">30%</h5>
+            <h5  class="porcentaje">7%</h5>
             </div>
             </div>
         </div>
@@ -114,7 +117,7 @@
             <div class="info">
             <h4>Cocina</h4>
             <div class="contenido_porcentaje">
-            <h5  class="porcentaje">30%</h5>
+            <h5  class="porcentaje">7%</h5>
             </div>
             </div>
         </div>
@@ -125,7 +128,7 @@
             <div class="info">
             <h4>Infantil</h4>
             <div class="contenido_porcentaje">
-            <h5  class="porcentaje">30%</h5>
+            <h5  class="porcentaje">7%</h5>
             </div>
             </div>
         </div>
@@ -136,7 +139,7 @@
             <div class="info">
             <h4>Regreso a Clases</h4>
             <div class="contenido_porcentaje">
-            <h5  class="porcentaje">30%</h5>
+            <h5  class="porcentaje">6%</h5>
             </div>
             </div>
         </div>
