--- a/index4.html
+++ b/index4.html
@@ -21,7 +21,8 @@
     <section id="contenido">
         <div class="forma">
         </div>   
-        <div>    
+        <div>   
+        <!--vinculacion a direccion de archivo poweBI de reporte de ventas de la empresa POLIMES SAS--> 
         <iframe class="informe" title="Report Section" width="100%" height="860" src="https://app.powerbi.com/view?r=eyJrIjoiMDg2NzE4YWItNzdkOC00YzY2LWJjZjItYjUwM2IwM2ZiODE0IiwidCI6ImQ1MTM4OGVmLTZhYjAtNDM2My05Zjk0LWQ1NjY0NGE0NTk3MCIsImMiOjR9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
         </div>
     </section>
