--- a/index2.html
+++ b/index2.html
@@ -19,50 +19,56 @@
         <li><a href="index4.html">Estadisticas</a></li>
     </nav>
     <section id="logo">
+        <!--logo principal de la empresa polimes-->
         <img src="imagenes/polimeslogo.png" alt="logo">
     </section>  
     <section class="ventas">
+        
+        <!--seccion de ventas principales de la empresa-->
         <div class="titular">
             <h3>Ventas Generadas</h3>
         </div>  
         <div class="totalvalores">
-            <p class="vtotal">$150.000.000</p>
+            <p class="vtotal">$782.252.365</p>
             </div> 
     </section>
     <hr>
     <section class="moderno">
+        <!--informacion de ventas del canal moderno y porcentaje-->
         <div class="titular">
             <h4>Ventas Canal Moderno</h4>
             <div class="porcentaje">
-                <h5>50%</h5> 
+                <h5>47%</h5> 
             </div>
         </div>  
         <div class="valores">
-        <p class="vsubtotal">$150.000.000</p>
+        <p class="vsubtotal">$371.084.360</p>
         </div>  
     </section>
     <hr>
     <section class="tradicional">
+        <!--informacion del canal tradicional de la empresa y porcentaje-->
         <div class="titular">
             <h4>Ventas Canal Tradicional</h4>
             <div class="porcentaje">
-                <h5>50%</h5> 
+                <h5>30%</h5> 
             </div>
         </div> 
         <div class="valores">
-        <p class="vsubtotal">$150.000.000</p>
+        <p class="vsubtotal">$238.210.604</p>
         </div> 
     </section>
     <hr>
     <section class="institucional">
+        <!--informacion del canal institucional de la empresa y porcentaje-->
         <div class="titular">
             <h4>Ventas Canal institucional</h4>
             <div class="porcentaje">
-                <h5>50%</h5> 
+                <h5>22%</h5> 
             </div>
         </div> 
         <div class="valores">
-            <p class="vsubtotal">$150.000.000</p>
+            <p class="vsubtotal">$172.957.401</p>
         </div>
     </section>
 
@@ -71,6 +77,7 @@
         <div class="parrafo">
         <p>© Todos los derechos reservados.</p>
         </div>
+        <!--imagenes de redes sociales-->
         <div class="redes">
         <a href="https://www.facebook.com/polimes/"target="_blank"><img src="logos/face.png" alt=""></a>
         <a href="https://www.instagram.com/polimescolombia/"target="_blank"><img src="logos/insta.png" alt=""></a>
